<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.akl.scorekeeperapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basketball_match"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/game_name"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_below="@id/game_name"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/team1"
        android:background="@drawable/custom_border"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/team1"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/team1_2plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/_2_ptsplus" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_ptsminus"
                android:layout_weight="1"
                android:id="@+id/team1_2minus"
                android:layout_margin="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_ptsplus"
                android:layout_weight="1"
                android:id="@+id/team1_3plus"
                android:layout_margin="8dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_ptsminus"
                android:id="@+id/team1_3minus"
                android:layout_weight="1"
                android:layout_margin="8dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:padding="20dp"
        android:layout_below="@id/team1"
        android:background="@drawable/custom_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/team2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/team_2"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team2_2plus"
            android:text="@string/_2_ptsplus"
            android:layout_weight="1"
            android:layout_margin="8dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_ptsminus"
            android:id="@+id/team2_2minus"
            android:layout_weight="1"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team2_3plus"
            android:text="@string/_3_ptsplus"
            android:layout_weight="1"
            android:layout_margin="8dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_ptsminus"
            android:layout_weight="1"
            android:id="@+id/team2_3minus"
            android:layout_margin="8dp"/>

    </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_below="@id/team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/score"
        android:padding="10dp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/score"
        android:padding="10dp"
        android:orientation="horizontal"
        android:id="@+id/score_layout">

        <TextView
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/team1score"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_weight="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_01"
            android:textColor="#000000"
            android:id="@+id/team2score"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_below="@+id/score_layout"
        android:layout_centerHorizontal="true"
        android:id="@+id/reset_button"/>








</RelativeLayout>
